--- a/Cv.html
+++ b/Cv.html
@@ -14,33 +14,39 @@
     <h1 class="Ayhan">Abdullayev Ayhan</h1> <hr>
     <h1 class="Profession">Profession</h1> 
     <p class="Prof">Programmer</p>
-    <h1 class="Profession">Education</h1>
-    <p class="ed">Studies at 239 number School and Studies at Computer Science course-TecSpace and there learning Python,Html,Css and JavaScript.</p>
-    <div>
+    <div class="box3">
+        <h1 class="Profession">Education</h1>
+        <p class="ed">Studies at 239 number School.</p>
+        <p class="ed">Studies at course-TecSpace.There learning</p>
+        <p class="ed">Python,Html,Css and JavaScript.</p>
+    </div>
+    <div class="pe">
         <h1  class="Profession">Skills</h1>
-        <table border="3" class="B">
-            <thead>
-                <tr>
-                    <th colspan="2"  class="title"> <p class="L">Launguage Skills</p></th>
-                </tr>
-                <tr>
-                    <th class="BE">
-                        English
-                    </th>
-                    <th class="BE">
-                        B2
-                    </th>
-                </tr>
-                <tr>
-                    <th class="CA">Azerbaijan</th>
-                    <th class="CA">C1</th>
-                </tr>
-                <tr>
-                    <th class="CR">Russian</th>
-                    <th class="CR">C2</th>
-                </tr>
-            </thead>
-        </table>
+        <div class="ui">
+            <table border="3" class="B">
+                <thead>
+                    <tr>
+                        <th colspan="2"  class="title"> <p class="L">Launguage Skills</p></th>
+                    </tr>
+                    <tr>
+                        <th class="BE">
+                            English
+                        </th>
+                        <th class="BE">
+                            B2
+                        </th>
+                    </tr>
+                    <tr>
+                        <th class="CA">Azerbaijan</th>
+                        <th class="CA">C1</th>
+                    </tr>
+                    <tr>
+                        <th class="CR">Russian</th>
+                        <th class="CR">C2</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
     </div>
     
     <div class="ep">
